modified:   src/components/MainPage/Card/LaptopCard.jsx 	modified:   src/components/MainPage/Card/ProductCard.jsx 	modified:   src/index.css

--- a/src/index.css
+++ b/src/index.css
@@ -371,6 +371,13 @@ hr.button-hr-active {
 }
 
 @media (max-width: 450px) {
+  .button-link {
+    font-size: 9px;
+    margin-top: 0;
+    height: auto;
+    line-height: 150%;
+  }
+
   .slider-text h2 {
     font-size: 24px;
   }
@@ -562,14 +569,14 @@ hr.button-hr-active {
     height: auto;
   }
   .product-card {
-    width: calc(100% - 30px); /* Two cards per row with gap considered */
-    margin: 10px 0; /* Maintain vertical margin */
+    width: calc(100% - 30px); 
+    margin: 10px 0; 
     height: auto;
   }
   .brand-card {
     margin: 0 auto;
   }
-}
+} 
 
 .brand-card:hover {
   cursor: pointer;
@@ -588,9 +595,36 @@ hr.button-hr-active {
   outline: none !important;
   transform: scale(1) !important;
 }
+
 .card-img {
   margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
   position: relative;
+  object-fit: contain;
+}
+
+@media screen and (max-width: 1240px) and (min-width: 1024px) {
+    .card-img-right {
+      left: 70%;
+    }
+}
+
+.card-img-right {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 90px;
+  z-index: 100;
+  right: -45%;
+}
+
+.card-img-right-laptop {
+  right: -10%;
 }
 
 .body-card {
@@ -602,45 +636,21 @@ hr.button-hr-active {
 .card-palette-laptop {
   width: 24px;
   height: 88px;
-  position: absolute;
-  bottom: 0;
-  left: 190px;
-  z-index: 2;
-}
-
-.card-palette-laptop {
-  left: 245px;
-}
-
-@media screen and (max-width: 1440px) and (min-width: 1024px) {
-  .card-palette {
-    width: 24px;
-    position: absolute;
-    bottom: 0;
-    left: 160px;
-  }
-
-  .card-palette-laptop {
-    left: 170px;
-  }
-
-  .card-img-laptop {
-    width: 120px;
-  }
 }
 
 .card-img-laptop {
   margin: 0 auto;
-  position: relative;
-  width: 90%;
   z-index: 1;
+}
+
+.body-card-laptop {
+  width: auto;
 }
 
 .card-svg_like {
   cursor: pointer;
   width: 36px;
   height: 36px;
-  position: absolute;
   top: 10px;
   right: 10px;
   z-index: 2;
@@ -732,10 +742,23 @@ hr.button-hr-active {
     position: relative;
   }
 
+  .card-img-right {
+    gap: 60px;
+    right: -60%;
+  }
+
+  .card-img-right-laptop {
+    gap: 90px;
+    right: -20%;
+  }
+
   .body-card {
     width: 100px;
-    height: 124px;
-    object-fit: contain;
+    height: 130px;
+  }
+
+  .body-card-laptop {
+    width: auto;
   }
 
   .card h3 {
@@ -754,15 +777,14 @@ hr.button-hr-active {
 
   .card-palette {
     height: 44px;
-    left: 105%;
     bottom: 0;
-    right: 0;
+
   }
 
   .card-palette-laptop {
     width: 12px;
     height: 12px;
-    left: 95%;
+    right: -2%;
   }
 
   .arrow-container {
@@ -795,7 +817,7 @@ hr.button-hr-active {
   }
 
   .card-rate {
-    font-size: 10px;
+    font-size: 12px;
     padding-top: 6px;
   }
 
@@ -839,13 +861,29 @@ hr.button-hr-active {
     height: 100px;
   }
 
-  .card-palette {
-    left: 115%;
+  .body-card-laptop {
+    width: 130px;
+    height: 100px;
+  }
+
+  .card-img-right {
+    gap: 45px;
+    right: -60%;
+  }
+
+  .card-img-right-laptop {
+    gap: 80px;
+    right: -20%;
   }
 
   .product-card {
     width: 100px;
     height: 100px;
+  }
+
+  .brand-card {
+    width: 120px;
+    height: 120px;
   }
 }
 
