--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,17 @@ a {
   margin: 0;
 }
 
+.header-search {
+  width: 610px;
+  height: 56px;
+  display: flex;
+  border-radius: 16px;
+  min-width: 150px;
+  flex-grow: 1;
+  padding-left: 40px;
+  padding-right: 42px;
+}
+
 /* Responsive styles */
 @media (max-width: 768px) {
   #root {
@@ -86,9 +97,8 @@ a {
   .header-search {
     flex-grow: 1;
     max-height: 48px;
-    margin-right: 0 !important;
-    margin-left: 0 !important;
-
+    padding-left: 0px;
+    padding-right: 0px;
     > span {
       padding: 0 !important;
       align-items: center;
@@ -134,7 +144,6 @@ a {
   .navigations-buttons .navigation-button:hover > svg path {
     stroke: #fff !important;
   }
-
   .navigations-buttons .navigation-button:not(.navigation-button:last-child) {
     display: none !important;
   }
@@ -146,11 +155,9 @@ a {
     padding: 14px 16px 12px 16px !important;
     background-color: #f8f7fa;
   }
-
   .nunito-sans-logo {
     font-size: 34px;
   }
-
   .search-container {
     width: 100%;
     max-width: 100%;
